--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <title>MapboxProject</title>
   <base href="/">
 
+  <!--
+    https://angularfirebase.com/lessons/build-realtime-maps-in-angular-with-mapbox-gl/
+  -->
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.css' rel='stylesheet' />
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
